fixed some layout problems

--- a/css/Common.css
+++ b/css/Common.css
@@ -148,7 +148,7 @@ legend {
 }
 /*Disclose-  https://bootsnipp.com/snippets/4nEQK*/
 div.stars {
-    width: 143px;
+    width: 150px;
     display: inline-block;
 }
 
